# Aether

./: Cargo.toml  README.md  run-qemu-arm64.sh  run-qemu-x86.sh  rust-toolchain.toml
.github/workflows/: build.yml
apps/shell/: Cargo.toml  linker.ld
apps/shell/.cargo/: config.toml
apps/shell/src/: main.rs
init/: Cargo.toml
init/.cargo/: config.toml
init/src/: main.rs
src/: backend.rs  globals.rs  interrupts.rs  keyboard.rs  main.rs  multitasking.rs  video.rs
src/arch/: mod.rs
src/arch/aarch64/: exception.rs  mmu.rs  mod.rs  svc.rs
src/arch/x86_64/: gdt.rs  idt.rs  mod.rs  paging.rs  syscall.rs
src/drivers/: block.rs  console.rs  mod.rs
src/fs/: initrd.rs  mod.rs  ramfs.rs  vfs.rs
src/mm/: heap.rs  mod.rs  paging.rs  pmm.rs  vmm.rs
src/sched/: mod.rs  queue.rs  task.rs
src/syscall/: dynlink.rs  elf.rs  mod.rs
